--- a/BiLSTM Conversion Test.ipynb
+++ b/BiLSTM Conversion Test.ipynb
@@ -44,39 +44,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def equal(tensor1, tensor2):\n",
     "    for i, j in zip(tensor1.reshape(-1), tensor2.reshape(-1)):\n",
-    "        if abs(i - j) > 0.0001:\n",
+    "        if abs(i - j) > 0.001:\n",
     "            return False\n",
     "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_2 (Dense)              (1, 925, 8)               32        \n",
+      "dense_3 (Dense)              (1, 925, 8)               32        \n",
       "_________________________________________________________________\n",
-      "lstm_8 (LSTM)                (1, 925, 64)              18688     \n",
+      "lstm_12 (LSTM)               (1, 925, 64)              18688     \n",
       "_________________________________________________________________\n",
-      "lstm_9 (LSTM)                (1, 925, 64)              33024     \n",
+      "lstm_13 (LSTM)               (1, 925, 64)              33024     \n",
       "_________________________________________________________________\n",
-      "lstm_10 (LSTM)               (1, 925, 64)              33024     \n",
+      "lstm_14 (LSTM)               (1, 925, 64)              33024     \n",
       "_________________________________________________________________\n",
-      "lstm_11 (LSTM)               (1, 925, 64)              33024     \n",
+      "lstm_15 (LSTM)               (1, 925, 64)              33024     \n",
       "_________________________________________________________________\n",
       "softmax (Activation)         (1, 925, 64)              0         \n",
       "=================================================================\n",
@@ -105,21 +105,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmp4xjrqwpb/assets\n"
+      "INFO:tensorflow:Assets written to: /tmp/tmp4ghk5_eb/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmp4xjrqwpb/assets\n"
+      "INFO:tensorflow:Assets written to: /tmp/tmp4ghk5_eb/assets\n"
      ]
     },
     {
@@ -128,7 +128,7 @@
        "476052"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +168,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing converted model model \n",
+    "The output differs across different runs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +186,7 @@
        "False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,11 +200,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Sometimes it works after few runs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interpreter.invoke()\n",
+    "output = interpreter.get_tensor(output_details[0]['index'])\n",
+    "interpreter.invoke()\n",
+    "output2 = interpreter.get_tensor(output_details[0]['index'])\n",
+    "equal(output,output2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Non-converted TensorFlow always yields the same output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output3 = new_model.predict(data)\n",
+    "output4 = new_model.predict(data)\n",
+    "equal(output3,output4)"
+   ]
   },
   {
    "cell_type": "code",
